# Kourou

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  meson.build  org.creavo.Kourou.json
data/: meson.build  org.creavo.Kourou.desktop.in  org.creavo.Kourou.gschema.xml  org.creavo.Kourou.metainfo.xml.in  org.creavo.Kourou.service.in
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  en-US.po  it-IT.po  kourou.pot  meson.build
src/: app.rs  application.rs  config.rs  config.rs.in  kourou.gresource.xml  main.rs  meson.build  window.rs  window.ui
