[package]
name = "kourou"
version = "0.1.0"
authors = ["Alessandro <alessandro.cresto.miseroglio@creavo.lol>"]
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
